--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ColinNebula/webdev-challenge-colin#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -27,5 +28,5 @@
   },
   "devDependencies": {
     "jest": "^27.3.1"
-  }  
-} 
+  }
+}
