--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A webdev challenge",
   "main": "server.js",
   "scripts": {
+    "test": "jest",
     "start": "node server.js",
-    "seeds": "node seeds/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seeds": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
